Test/git-issues/git-issue-697c.dfy.expect
git-issue-697c.dfy(9,26): Error: function calls are allowed only in specification contexts (consider declaring the function a 'function method')
git-issue-697c.dfy(9,40): Error: subset type's constraint must be compilable, until Dafny moves constraints handling to the verifier.
2 resolution/type errors detected in git-issue-697c.dfy
